--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
       <a href="#Furniture">Furniture</a>
       <a href="#My Account">My Account </a>
       <span><img src="account.png" /> 5<img src="option.png" /></span>
+
+    </div>
+    <div class="footer">
+         <button type="submit">Discover more  &rarr;</button><br><br>
+         <a href="#follow">Follow</a>
+         <div class="icon">
+          <img src="facebook.png" alt="facebook-icon" class="images">
+          <img src="linkedin.png" alt="linkedin" class="images">
+          <img src="twitter.png" alt="twitter" class="images">
+          <img src="behance.png" alt="behance" class="images">
+         </div>
+
     </div>
   </body>
 </html>
