--- a/index.html
+++ b/index.html
@@ -7,25 +7,39 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#shop">Shop</a>
-      <a href="#Decor">Decor</a>
-      <a href="#Furniture">Furniture</a>
-      <a href="#My Account">My Account </a>
-      <span><img src="account.png" /> 5<img src="option.png" /></span>
+    <div class="main">
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#shop">Shop</a>
+        <a href="#Decor">Decor</a>
+        <a href="#Furniture">Furniture</a>
+        <a href="#My Account">My Account </a>
+        <span
+          ><img src="account.png" class="image" /> 5<img
+            src="option.png"
+            class="image"
+        /></span>
+      </div>
 
-    </div>
-    <div class="footer">
-         <button type="submit">Discover more  &rarr;</button><br><br>
-         <a href="#follow">Follow</a>
-         <div class="icon">
-          <img src="facebook.png" alt="facebook-icon" class="images">
-          <img src="linkedin.png" alt="linkedin" class="images">
-          <img src="twitter.png" alt="twitter" class="images">
-          <img src="behance.png" alt="behance" class="images">
-         </div>
+      <div class="fashion-web">
+        <img src="git-flow-test.jpg" class="background-image" />
+        <p class="image-word">
+          Enjoy your own life and discover you <br />
+          more stylish with best shoping.
+        </p>
+      </div>
+      <div class="footer">
+        <button type="submit">Discover more &rarr;</button><br /><br />
+        <button type="submit" class="more">more &rarr;</button><br /><br />
 
+        <a href="#follow">Follow</a>
+        <div class="icon">
+          <img src="facebook.png" alt="facebook-icon" class="images" />
+          <img src="linkedin.png" alt="linkedin" class="images" />
+          <img src="twitter.png" alt="twitter" class="images" />
+          <img src="behance.png" alt="behance" class="images" />
+        </div>
+      </div>
     </div>
   </body>
 </html>
